--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,13 @@
 a{
-  color:blue;
+  color: #314d34;
   font-size: 20px;
+}
+
+h1{
+  color: #355c88;
+  font-size: 40px;
+}
+
+body {
+  background-color: #eedcc9;
 }
