--- a/assets/main.css
+++ b/assets/main.css
@@ -1,13 +1,123 @@
+
+
+body {
+  background-image: url("copy2.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  width:100%;
+  height:100%;
+}
+
+
+/* background-position: center;
+    */
+
+
+.cha{
+  position: fixed;
+  text-align: right;
+  color: #ffffff;
+  top: 15px;
+  right: 40px;
+  width: 100%;
+  font-size: 35px;
+  font-family: sans-serif;
+
+}
+
+a.chaa{
+  color: #ffffff;
+}
+
+a.chaa:hover {
+  opacity: 1;
+  font-size: 35px;
+}
+
+.ex{
+  position: fixed;
+  text-align: none;
+  color: #ffffff;
+  top: 165px;
+  left: 90px;
+  width: 100%;
+  font-size: 50px;
+  font-family: sans-serif;
+
+}
+
+.all{
+  position: fixed;
+  text-align: none;
+  color: #ffffff;
+  top: 340px;
+  left: 35px;
+  width: 100%;
+  font-size: 30px;
+  font-family: sans-serif;
+
+}
+
+.hover{
+  position: fixed;
+  text-align: none;
+  color: #ffffff;
+  top: 480px;
+  left: 350px;
+  width: 100%;
+  font-size: 30px;
+  font-family: sans-serif;
+
+}
+
+.still{
+  position: fixed;
+  text-align: none;
+  color: #ffffff;
+  top: 610px;
+  left: 180px;
+  width: 100%;
+  font-size: 30px;
+  font-family: sans-serif;
+
+}
+
+.har{
+  position: fixed;
+  text-align: right;
+  color: #ffffff;
+  top: 270px;
+  right: 560px;
+  width: 100%;
+  font-size: 30px;
+  font-family: sans-serif;
+
+}
+
+
+.pro{
+  position: fixed;
+  text-align: right;
+  color: #ffffff;
+  top: 165px;
+  right: 760px;
+  width: 100%;
+  font-size: 50px;
+  font-family: sans-serif;
+
+}
+
 a{
-  color: #314d34;
+  color: #ffffff;
+}
+
+a:hover {
+  opacity: 0.5;
   font-size: 20px;
+  transition: ease all .6s;
 }
 
 h1{
-  color: #355c88;
+  color: #ffffff;
   font-size: 40px;
-}
-
-body {
-  background-color: #eedcc9;
 }
