--- a/assets/main.css
+++ b/assets/main.css
@@ -6,11 +6,14 @@ body {
   background-repeat: no-repeat;
   width:100%;
   height:100%;
+  cursor: url(circle2.png), auto;
 }
 
 
 /* background-position: center;
     */
+
+
 
 
 .cha{
@@ -23,6 +26,8 @@ body {
   font-size: 35px;
   font-family: sans-serif;
 
+
+
 }
 
 a.chaa{
@@ -32,6 +37,7 @@ a.chaa{
 a.chaa:hover {
   opacity: 1;
   font-size: 35px;
+  cursor: url(circle2.png), auto;
 }
 
 .ex{
@@ -104,8 +110,13 @@ a.chaa:hover {
   width: 100%;
   font-size: 50px;
   font-family: sans-serif;
+  cursor: url(circle2.png), auto;
 
 }
+
+
+
+
 
 a{
   color: #ffffff;
@@ -115,9 +126,5 @@ a:hover {
   opacity: 0.5;
   font-size: 20px;
   transition: ease all .6s;
-}
-
-h1{
-  color: #ffffff;
-  font-size: 40px;
+  cursor: url(circle2.png), auto;
 }
