--- a/flexbox/flexbox.css
+++ b/flexbox/flexbox.css
@@ -1,12 +1,61 @@
 body {
   background-color: #611515;
   font-family: sans-serif;
+  margin: 0;
+  height: 100vh;
+  cursor: cell;
+
+
+}
+
+.cursor {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #d4d2cd;
+  border-radius: 50%;
+  position: absolute;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
+  animation: cursorAnim .5s infinite alternate;
+
+}
+
+.cursor::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border: 8px solid rgb(209, 155, 19);
+  border-radius: 50%;
+  opacity: 0.3;
+  left: -9px;
+  bottom: -9px;
+  animation: cursorAnim2 .5 infinite alternate;
+}
+
+@keyframes cursorAnim {
+  from {
+    transform: scale(1);
+  }
+  to{
+    transform: scale(1.7);
+  }
+}
+
+@keyframes cursorAnim2 {
+  from {
+    transform: scale(3);
+  }
+  to{
+    transform: scale(8);
+  }
 }
 
 .dec {
 text-align: center;
 font-family: sans-serif;
 font-size: 50px;
+transition: ease all 1s;
 
 }
 
@@ -17,26 +66,13 @@ font-size: 50px;
   color: #0f2f12;
   opacity: 0.8;
   position: absolute;
-  top: 60px;
-  right: 630px;
+top: 60px;
+right: 630px;
+*/
+  transition: ease all 1s;
 }
 
 
-.container {
-  display: flex;
-
-  /*flex-direction:  column;*/
-  justify-content:  space-between;
-  flex-wrap:  wrap;
-  padding:10px;
-  height:  100vh;
-  background-color: #d4d2cd;
-  /*min-height: 300px;*/
-  font-family: sans-serif;
-  color:  #0f2f12;
-  font-size:  36px;
-  text-align:  center;
-}
 
 
 
@@ -44,281 +80,222 @@ font-size: 50px;
 
 * {box-sizing:  border-box;}
 
-.container {
-  max-width: 1450px;
-  margin: 20px auto;
-  width: 700px;
-}
 
-
-
-
-.m1 {
-background-color: #611515;
-}
-
-.m2 {
-  background-color: #611515;
-}
-
-.m3 {
-  background-color:  #611515;
-}
-
-.m4 {
-  background-color:  #611515;
-}
-
-.m5 {
-  background-color:  #611515;
-}
-
-.m6 {
-  background-color:  #611515;
-}
-
-.m7 {
-  background-color:  #611515;
-}
-
-.m8 {
-  background-color:  #611515;
-}
-.m9 {
-  background-color:  #611515;
-}
-.m10 {
-  background-color:  #611515;
-}
-.m11{
-  background-color:  #611515;
-}
-.m12{
-  background-color:  #611515;
-}
-.m13{
-  background-color:  #611515;
-}
-.m14{
-  background-color:  #611515;
-}
-.m15{
-  background-color:  #611515;
-}
-.m16{
-  background-color:  #611515;
-}
-.m17{
-  background-color:  #611515;
-}
-.m18{
-  background-color:  #611515;
-}
-.m19{
-  background-color:  #611515;
-}
-.m20{
-  background-color:  #611515;
-}
-.m21{
-  background-color:  #611515;
-}
-.m22{
-  background-color:  #611515;
-}
-
-
-/*
-
-.con {
+.week {
   display: flex;
+  height: 150px;
+  justify-content: flex-end;
+}
+.month {
+  max-width: 1050px;
+  margin: 50px auto;
+    background-color: #d4d2cd;
+    flex-direction: row;
+
+      flex-wrap:  wrap;
+      padding:none;
+      height: auto;
+
 }
 
-.m {
+.hover {
+  color: #757575;
+  position: absolute;
+  top: 70px;
+  left: 40px;
+  animation-name: example;
+  animation-duration: 10s;
+
+}
+
+@keyframes example {
+  0%   { left:40px; top:70px;}
+  25%  {left:600px; top:70px;}
+  50%  { left:600px; top:200px;}
+  75%  { left:40px; top:200px;}
+  100% {left:40px; top:70px;}
+}
+
+}
+  /*
+  width: 1100px;
+  display: flex;
+
+  flex-direction: row;
+    justify-content: flex-start ;
+
+    flex-wrap:  wrap;
+    padding:10px;
+    height:  100vh;
+
+    */
+
+    /*min-height: 300px;*/
+
+
+}
+
+
+.day {
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 0;
 }
 
-.holiday {
-  flex: 50%;
-}
+.day {
+  padding: 10px;
+  font-family: sans-serif;
+  font-size:  18px;
+  text-align:  center;
 
-.holiday-1 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-1 {
-  opacity: 100%;
-}
-
-.holiday-2 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-2 {
-  opacity: 100%;
-}
-
-.holiday-3 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-3 {
-  opacity: 100%;
-}
-
-.holiday-4 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-4 {
-  opacity: 100%;
-}
-
-.holiday-5 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-5 {
-  opacity: 100%;
-}
-
-.holiday-6 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-6 {
-  opacity: 100%;
-}
-
-.holiday-7 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-7 {
-  opacity: 100%;
-}
-
-.holiday-8 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-8 {
-  opacity: 100%;
-}
-
-.holiday-9 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-9 {
-  opacity: 100%;
-}
-
-.holiday-10 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-10 {
-  opacity: 100%;
-}
-
-.holiday-11 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-11 {
-  opacity: 100%;
-}
-
-.holiday-12 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-12 {
-  opacity: 100%;
-}
-
-.holiday-13 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-13 {
-  opacity: 100%;
-}
-
-.holiday-14 {
-  opacity: 0%;
-  transition: ease all 1s;
-}
-
-.holiday:hover .holiday-14 {
-  opacity: 100%;
-}
-
-.week:first-of-type .day:first-of-type {
-  margin-left: 71.4%;
-}
-
-.week:last-of-type .day:last-of-type {
-  margin-right: 0;
-}
-
-*/
-
-
-/*
-.week {
-  height: 150px;
 }
 
 .day {
-  color: chocolate;
-  padding: 6px;
-  background-color: transparentize(white, 0.30);
-  box-shadow:
-    2px 2px #F9A440,
-    inset 2px 2px 0 0 #F9A440;
+  margin: 10px 10px;
+  width: 130px;
+  height: 130px;
+  background-color: #611515;
+  color:  #0f2f12;
 }
-*/
 
+.day1 {
+  margin: 10px 10px;
+  width: 130px;
+  height: 130px;
+  background-color: #d4d2cd;
+  color:  #d4d2cd;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size:  18px;
+  text-align:  center;
+
+}
+
+.dayy {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size:  18px;
+  text-align:  center;
+  margin: 10px 10px;
+  width: 130px;
+  height: 130px;
+  background-color: #611515;
+  color:  #0f2f12;
+}
+
+.dayy:hover {
+  color: #611515;
+  transition: ease all 1s;
+}
+
+.ct {
+  opacity: 0;
+  position: relative;
+  bottom: 67px;
+}
+
+.ct:hover {
+  opacity: 1;
+  transition: ease all 1s;
+}
+
+.pre {
+  opacity: 0;
+  position: relative;
+  bottom: 84px;
+}
+
+.pre:hover {
+  opacity: 1;
+  transition: ease all 1s;
+}
+
+.milk {
+  opacity: 0;
+  position: relative;
+  bottom: 93px;
+}
+
+.milk:hover {
+  opacity: 1;
+  transition: ease all 1s;
+}
+
+.fireworks {
+  opacity: 0;
+  position: relative;
+  bottom: 88px;
+}
+
+.fireworks:hover {
+  opacity: 1;
+  transition: ease all 1s;
+}
+
+.nop {
+  opacity: 0;
+  position: relative;
+  bottom: 20px;
+}
+
+.nop:hover {
+  opacity: 1;
+  transition: ease all 1s;
+}
+
+
+.holiday {
+  opacity: 0;
+  padding: 13px;
+text-align: center;
+
+}
+
+.holiday:hover {
+  opacity: 1;
+
+  font-size: 18px;
+
+  transition: ease all 1s;
+
+}
 
 @media (max-width:1024px){
 
   .dec {
     color: black;
     text-align: center;
-    font-size: 72px;
+    font-size: 50px;
     letter-spacing: 5px;
   }
 
   .y2022 {
     color: #0f2f12;
-    text-align: center;
+    text-align: right;
     font-size: 36px;
     transition: ease all 1s;
   }
 
-  .container {
+  .month {
     text-align: center;
     vertical-align: center;
-    font-size: 16px;
+
   }
 
+
+  .holiday {
+    opacity: 0;
+  }
+
+  .holiday:hover {
+    opacity: 1;
+    font-size: 18px;
+      transition: ease all 1s;
+
+  }
 
 }
 
@@ -326,7 +303,7 @@ background-color: #611515;
 
 
   .dec {
-    color: white;
+    color: #d4d2cd;
     text-align: center;
     font-size: 30px;
     letter-spacing: 2px;
@@ -334,15 +311,61 @@ background-color: #611515;
 
   .y2022 {
     color: white;
-    text-align: center;
+    text-align: right;
     font-size: 20px;
+    right: 90px;
 
   }
 
-  .container {
+  .month {
     text-align: center;
     vertical-align: center;
-    font-size: 14px;
+
+  }
+
+  .day {
+    font-size: 15px;
+  }
+
+  .ct {
+
+    bottom: 50px;
+    width: 20px;
+    transition: ease all 1s;
+  }
+
+  .milk {
+
+    bottom: 60px;
+    width: 30px;
+    transition: ease all 1s;
+  }
+
+  .pre {
+
+    bottom: 55px;
+    width: 30px;
+    transition: ease all 1s;
+  }
+
+  .fireworks {
+
+    bottom: 55px;
+    width: 30px;
+    transition: ease all 1s;
+  }
+
+  .holiday {
+    opacity: 0;
+    font-size: 2px;
+
+  }
+
+  .holiday:hover {
+    opacity: 1;
+    font-size: 13px;
+      transition: ease all 1s;
+
   }
 
 
