--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,7 @@ body {
   background-repeat: no-repeat;
   width:100%;
   height:100%;
-  cursor: url(circle2.png), auto;
+  /*cursor: url(circle2.png), auto; */
 }
 
 
@@ -14,7 +14,49 @@ body {
     */
 
 
+    .cursor {
+      width: 25px;
+      height: 25px;
+      border: 2px solid #d4d2cd;
+      border-radius: 50%;
+      position: absolute;
+      transition-duration: 300ms;
+      transition-timing-function: ease-out;
+      animation: cursorAnim .5s infinite alternate;
 
+    }
+
+    /* .cursor:after {
+      content: "";
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      border: 8px solid rgb(209, 155, 19);
+      border-radius: 50%;
+      opacity: 0.3;
+      left: -9px;
+      bottom: -9px;
+      animation: cursorAnim2 .5 infinite alternate;
+    }
+
+    @keyframes cursorAnim {
+      from {
+        transform: scale(1);
+      }
+      to{
+        transform: scale(1.7);
+      }
+    }
+
+    @keyframes cursorAnim2 {
+      from {
+        transform: scale(3);
+      }
+      to{
+        transform: scale(8);
+      }
+    }
+*/
 
 .cha{
   position: fixed;
@@ -37,7 +79,7 @@ a.chaa{
 a.chaa:hover {
   opacity: 1;
   font-size: 35px;
-  cursor: url(circle2.png), auto;
+  /*cursor: url(circle2.png), auto; */
 }
 
 .ex{
@@ -110,7 +152,7 @@ a.chaa:hover {
   width: 100%;
   font-size: 50px;
   font-family: sans-serif;
-  cursor: url(circle2.png), auto;
+    /*cursor: url(circle2.png), auto; */
 
 }
 
@@ -126,5 +168,5 @@ a:hover {
   opacity: 0.5;
   font-size: 20px;
   transition: ease all .6s;
-  cursor: url(circle2.png), auto;
+  /*cursor: url(circle2.png), auto; */
 }
