--- a/assets/harmonic.css
+++ b/assets/harmonic.css
@@ -1,9 +1,14 @@
+html {
+  cursor: url(half2.png), auto;
+}
+
+
 body {
   background-image: url("entriesbg.jpeg");
   background-size:cover;
   width:100%;
   height:100%;
-  cursor: url(half2.png), auto;
+
 }
 
 
