--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,6 @@
-
+html {
+  cursor: url(circle2.png), auto;
+}
 
 body {
   background-image: url("copy2.jpg");
@@ -6,7 +8,7 @@ body {
   background-repeat: no-repeat;
   width:100%;
   height:100%;
-  /*cursor: url(circle2.png), auto; */
+
 }
 
 
