--- a/assets/main.css
+++ b/assets/main.css
@@ -70,8 +70,19 @@ body {
   font-size: 35px;
   font-family: sans-serif;
 
+}
 
-
+.core {
+  position: fixed;
+  text-align: right;
+  color: #ffffff;
+  margin: 0px;
+  padding: 0px;
+  top: 500px;
+  right: 40px;
+  width: 100%;
+  font-size: 35px;
+  font-family: sans-serif;
 }
 
 a.chaa{
@@ -160,8 +171,6 @@ a.chaa:hover {
 
 
 
-
-
 a{
   color: #ffffff;
 }
@@ -170,5 +179,237 @@ a:hover {
   opacity: 0.5;
   font-size: 20px;
   transition: ease all .6s;
-  /*cursor: url(circle2.png), auto; */
+}
+
+
+.container .card .icon {
+
+    position: fixed;
+
+    top: 0px;
+
+    left: 20px;
+
+    width: 40px;
+
+    height: 40px;
+
+    border-radius: 50%;
+    background-image: url("insta.png");
+
+    background: #ffffff;
+
+      align-items: center;
+
+}
+
+/*
+.container .card .icon .fa {
+
+    position: absolute;
+
+    top: 50%;
+
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+
+    font-size: 80px;
+
+    color: pink;
+
+}
+
+*/
+
+.container .card .slide {
+
+    width: 200px;
+
+    height: 40px;
+
+    transition: 0.5s;
+
+    top: 800px;
+
+    left: 20px;
+
+
+}
+
+
+
+.container .card .slide.slide1 {
+
+    position: relative;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    z-index: -1;
+
+    transition: .7s;
+
+    transform: translateX(10px);
+
+}
+
+.container .card:hover .slide.slide1{
+
+    transform: translateX(0);
+
+}
+
+.container .card .slide.slide2 {
+
+    position: relative;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+top: 760px;
+
+    box-sizing: border-box;
+
+    transition: .8s;
+
+    transform: translateX(-200px);
+
+
+}
+
+
+.container .card:hover .slide.slide2{
+
+    transform: translateX(30px);
+
+}
+
+/*
+
+.container .card .slide.slide2::after{
+
+    content: "";
+
+    position: absolute;
+
+    width: 30px;
+
+    height: 4px;
+
+    bottom: 15px;
+
+    left: 50%;
+
+    left: 50%;
+
+    transform: translateY(-50%);
+}
+
+*/
+
+
+h1 {
+
+    font-size: 15px;
+
+    text-align: center;
+
+    color: #ffffff;
+
+    font-family: sans-serif;
+}
+
+
+
+
+.container2 .card .icon {
+
+    position: fixed;
+
+    top: 0px;
+
+    left: 20px;
+
+    width: 40px;
+
+    height: 40px;
+
+    border-radius: 50%;
+
+    background: #ffffff;
+
+    align-items: center;
+
+}
+
+
+.container2 .card .slide {
+
+    width: 300px;
+
+    height: 40px;
+
+    transition: 0.5s;
+
+    top: 780px;
+
+    left: 19px;
+
+
+}
+
+.container2 .card .slide.slide1 {
+
+    position: relative;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    z-index: -1;
+
+    transition: .7s;
+
+    transform: translateX(10px);
+
+}
+
+.container2 .card:hover .slide.slide1{
+
+    transform: translateX(0);
+
+}
+
+.container2 .card .slide.slide2 {
+
+    position: fixed;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    top: 868px;
+
+    box-sizing: border-box;
+
+    transition: .8s;
+
+    transform: translateX(-280px);
+}
+
+.container2 .card:hover .slide.slide2{
+
+    transform: translateX(35px);
+
 }
